<resources>
    <string name="app_name">Recipes</string>
    <string name="Recipes">Рецепты</string>
    <string name="Language">RU</string>
    <string name="Breakfast">Завтрак</string>
    <string name="Lunch">Обед</string>
    <string name="Dinner">Ужин</string>
    <string name="Russian">Русский</string>
    <string name="English">English</string>
    <string name="Chinese">中文</string>
    <string name="language_select">Выберите язык</string>
    <string name="back_btn">Назад</string>
    <string name="Recipe_1">Сырники</string>
    <string name="Recipe_2">Мясо с вишней</string>
    <string name="Recipe_3">Жареный рис</string>
    <string name="Ingredients">Ингредиенты:</string>
    <string name="Ingredients_1">1) Творог 400  гр \n2) Яйца 1  шт. \n3) Сахар  2  стол.л.  \n4) Соль (щепотка) по вкусу \n5) Ванильный сахар 5  гр  \n6) Пшеничная мука (плюс на подпыл) 40  гр  \n7) Растительное масло 2  стол.л.</string>
    <string name="Cooking">Пошаговое приготовление:</string>
    <string name="Cooking_1">ШАГ 1: Отмерьте необходимые ингредиенты. Творог подойдет любой жирности. Ванильный сахар можно заменить на ванилин. \nШАГ 2: Если творог крупинчатый или хлопьями, пропустите его через блендер, чтобы получить однородную структуру.  \nШАГ 3: Выложите творог в подходящую по размеру миску. Добавьте соль, сахар, ванильный сахар, перемешайте. Количество сахара берите по вкусу. \nШАГ 4: Добавьте к творогу взбитое яйцо, хорошо перемешайте.  \nШАГ 5: Всыпьте через сито муку, тщательно перемешайте.  \nШАГ 6: Творожное тесто оставьте на столе на 15 минут.  \nШАГ 7: Стол присыпьте немного мукой, скатайте из теста колбаску. Разделите тесто на равные части в зависимости от желаемого размера сырников.  \nШАГ 8: Каждую часть теста скатайте в колобок, затем прижмите, чтобы получился круглый, средней толщины сырничек.  \nШАГ 9: На сковороде разогрейте растительное масло, выложите сырники. На умеренном огне обжарьте сырники до румяного цвета.  \nШАГ 10: Когда сырники зарумянятся, переверните их на другую сторону и жарьте до готовности на медленном огне.</string>
    <string name="timer_btn_text_1">Жарка сырников</string>
    <string name="stop_btn">СТОП</string>
    <string name="Ready_toast">Готово!</string>
    <string name="Ingredients_2">1) Говядина 400 гр \n2) Вишня 300 гр \n3) Тимьян, чабрец (3-5 веточек) 10 гр \n4) Перец черный молотый по вкусу \n5) Соль по вкусу</string>
    <string name="Cooking_2">ШАГ 1: Подготовьте нужные ингредиенты. У меня говяжья вырезка, вы можете взять любое мясо, с любой части туши, главное, чтобы без костей. Вишня у меня свежая, но сюда подойдет и замороженная, и консервированная - просто слейте с нее лишний сок. ШАГ 2: Мясо хорошо помойте, обсушите и нарежьте небольшими кусочками. ШАГ 3: Говядину переложите в миску, посолите, поперчите, перемешайте. Оставьте мариноваться на 20 минут при комнатной температуре. ШАГ 4: Вишню вымойте, если она свежая, обсушите, удалите косточки. Из консервированной слейте весь сок и оставьте ее в дуршлаге на минут 5. Замороженную разморозьте, лишнюю жидкость удалите. Освободите от косточек. ШАГ 5: В подходящую форму для запекания выложите мясо и вишню вместе с мясным соком. Можно все выкладывать вперемешку, а можно слоями. Я делала вперемешку. ШАГ 6: Сверху разложите веточки тимьяна. ШАГ 7: Запекайте мясо с вишней в разогретой до 180°С духовке около 1 часа. Точное время запекания определяйте по своей духовке - его у вас может уйти больше или меньше, чем у меня. Чтобы мясо не было жестким, можно периодически поливать его соком со дна формы.</string>
    <string name="timer_btn_text_2">Маринование мяса</string>
    <string name="timer_btn_text_3">Запекание в духовке</string>
    <string name="Ingredients_3">1) Рис 1 стак.  \n2) Вода 2 стак.  \n3) Лук 1 шт.  \n4) Растительное масло 30 гр  \n5) Соль по вкусу \n6) Специи сухие по вкусу</string>
    <string name="Cooking_3">ШАГ 1: Подготовьте ингредиенты. Лук очистите от шелухи и промойте в холодной воде. С помощью острого ножа нарежьте мелко лук.\nШАГ 2: На горячую сковороду налейте немного растительного масла и выложите нарезанный лук. Обжарьте лук до золотистого состояния. Периодически помешивайте, чтобы не подгорел.\nШАГ 3: Пока жарится лук, подготовьте необходимое количество риса. Промойте его несколько раз в холодной воде. Затем всю воду слейте, воспользовавшись дуршлагом.\nШАГ 4: Когда лук обжарился, добавьте к нему в сковороду промытый рис. Перемешайте и обжарьте все вместе 3-4 минуты.\nШАГ 5: Добавьте к рису немного соли и специи. Для придания рису красивого желтого цвета можете добавить немного куркумы. Все хорошо перемешайте.\nШАГ 6: Влейте в сковороду необходимое количество горячей воды. Перемешайте и доведите до кипения. Затем накройте сковороду крышкой, сделайте минимальный огонь и оставьте готовиться примерно на 10-15 минут. Нам нужно, чтобы крупа впитала жидкость.\nШАГ 7: Как только вода впитается в рис, выключите огонь и оставьте рис постоять под крышкой еще минут 15. Затем можете подавать горячим.</string>
    <string name="timer_btn_text_4">Обжарка риса с луком</string>
    <string name="timer_btn_text_5">Тушение риса</string>
</resources>